# Cozmo

./: .env  .gitignore  AUDIT-WEBUI.md  AUDIT.md  CHANGELOG.md  DEVLOG.md  LICENSE  PLAN-ROADMAP.md  PLAN.md  PROJECT_SCOPE.md  README.md  REFERENCE.md  UPGRADE_PLAN.md  __main__.py  main.py  pyproject.toml  rag_local.py  test_brain_integration.py  test_phase2-6.py  test_searxng.py
.cozmo/agents/: review.md
chroma_db/: chroma.sqlite3
cozmo/: cli.py  code_indexer.py  config.py  config_cli.py  migrate.py  ollama.py  ollama_util.py  scheduler.py  searxng_util.py  task_queue.py  telegram_bot.py  webui.py  webui_server.py
cozmo/capabilities/: __init__.py  base.py  builtin.py  registry.py
cozmo/core/: __init__.py  agent.py  agent_registry.py  base_agent.py  chat_agent.py  code_agent.py  collab_agent.py  context.py  llm.py  model_manager.py  orchestrator.py  permissions.py  plan_agent.py  router.py  runtime.py  tool_registry.py  tool_risk.py
cozmo/core/agent/: event_bus.py  planner.py  profile.py  reflector.py  runtime.py  state.py
cozmo/core/chat/: handler.py
cozmo/core/providers/: catalog.py  llm.py  mcp.py
cozmo/default_skills/skill-creator/: SKILL.md
cozmo/docker/: sandbox.Dockerfile
cozmo/jobs/: __init__.py  job.py  manager.py  persistence.py
cozmo/memory/: chroma_store.py  knowledge_index.py  lancedb_store.py  manager.py
cozmo/models/: __init__.py  registry.py  service.py
cozmo/orchestrator/: __init__.py  complexity.py  continuation.py  intent.py  orchestrator.py  policy.py  task_types.py
cozmo/planner/: __init__.py  llm_planner.py  plan.py
cozmo/providers/: __init__.py  base.py
cozmo/runtime/: __init__.py  engine.py  event_bus.py  lessons.py  mcp_host.py  model_router.py  permissions.py  prompts.py  reflection.py  resources.py  runtime.py  session.py  workspace.py
cozmo/runtime/providers/: __init__.py  llm.py
cozmo/services/: __init__.py  context.py  embedding.py
cozmo/tests/: conftest.py  test_runtime.py
cozmo/tools/: __init__.py  calculator.py  code_ops.py  desktop.py  diagnostics.py  file_ops.py  scheduler_task.py  search_pipeline.py  task.py  telegram.py  weather.py  web_search.py
cozmo/tui/: __init__.py  __main__.py  app.py  chat_manager.py  sprite.py  themes.py
cozmo/tui/css/: app.tcss
cozmo/tui/screens/: file_picker.py  main.py  model_selector.py  permission.py  settings.py
cozmo/tui/widgets/: code_input.py  footer.py  header.py  input.py  sidebar.py  sprite.py
cozmo/webui/: index.html  package-lock.json  package.json  tailwind.config.js
cozmo/webui/src/: App.tsx
tests/: test_architecture.py  test_cognitive.py  test_execution.py  test_retrieval.py  test_v2_pipeline.py
(+63 files in other folders)
