[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cozmo"
version = "0.1.0"
description = "Fully local AI agent powered by Ollama — specialist model routing, ChromaDB memory, WebUI, and tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Cozmo Contributors"},
]
keywords = ["ai", "agent", "ollama", "local", "llm", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "langchain-ollama",
    "langchain-core",
    "chromadb",
    "tomli-w",
    "pyperclip",
    "Pillow",
    "prompt-toolkit",
    "mcp>=1.0",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "requests",
    "trafilatura",
    "httpx",
    "dateparser",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]

[project.urls]
Homepage = "https://github.com/rasumeng/cozmo"
Repository = "https://github.com/rasumeng/cozmo"
"Bug Tracker" = "https://github.com/rasumeng/cozmo/issues"

[tool.setuptools.packages.find]
include = ["cozmo*"]

[project.scripts]
cozmo = "cozmo.cli:main"
